# llm-join-spider

./: .gitignore  README (4).md  README.md  pyproject.toml
src/joinbench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/joinbench/data/: spider_fk_pairs.py  sqlite_utils.py
src/joinbench/llm/: gemini_client.py
src/joinbench/methods/: containment_sqlite.py  jaccard_sqlite.py  llm_query_join_gemini.py  llm_spider_gemini.py
src/joinbench/pipelines/: build_spider_pairs.py  build_spider_query_joins.py  failure_report.py  peek_values.py  probe_column.py  run_all_methods.py  run_full_benchmark.py  run_query_baselines.py  run_query_join_benchmark.py  run_spider_benchmark.py  summarize_runs.py  threshold_sweep.py
